@@ -9,12 +9,14 @@ package com.example.api.gateway.web.controller;
 import com.example.api.gateway.model.GenerationResponse;
 import com.example.api.gateway.model.ServiceResult;
 import com.example.api.gateway.model.ServiceType;
+import com.example.api.gateway.util.LogSanitizer;
 import com.example.api.gateway.web.api.GenerateAPI;
 import java.time.Duration;
 import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
 import java.util.concurrent.TimeoutException;
+import org.jspecify.annotations.NonNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
@@ -67,7 +69,7 @@ public class GenerateController implements GenerateAPI {
      */
     @GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
     @Override
-    public Mono<ResponseEntity<GenerationResponse>> generate() {
+    public Mono<@NonNull ResponseEntity<@NonNull GenerationResponse>> generate() {
         return callMicroservice(CATALOG_SERVICE_URL, ServiceType.CATALOG)
                 .flatMap(
                         catalogResult -> {
@@ -160,7 +162,7 @@ public class GenerateController implements GenerateAPI {
                                     "Retries exhausted for {} after {} attempts. Propagating last error: {}",
                                     url,
                                     retrySignal.totalRetries(),
-                                    retrySignal.failure().toString());
+                                    LogSanitizer.sanitizeForLog(retrySignal.failure().toString()));
                             return retrySignal.failure();
                         });
     }
@@ -181,7 +183,7 @@ public class GenerateController implements GenerateAPI {
                     "Retry filter: WebClientResponseException status {} for {}, message: '{}'",
                     wce.getStatusCode(),
                     url,
-                    wce.getMessage());
+                    LogSanitizer.sanitizeForLog(wce.getMessage()));
 
             if (wce.getStatusCode() == HttpStatus.SERVICE_UNAVAILABLE
                     || wce.getStatusCode() == HttpStatus.BAD_GATEWAY
@@ -191,8 +193,8 @@ public class GenerateController implements GenerateAPI {
                 return true;
             }
 
-            String wceMessage = safeLower(wce.getMessage());
-            String wceBody = safeLowerResponseBody(wce);
+            String wceMessage = safeLower(LogSanitizer.sanitizeForLog(wce.getMessage()));
+            String wceBody = safeLower(LogSanitizer.sanitizeForLog(safeLowerResponseBody(wce)));
 
             boolean shouldRetry =
                     wceBody.contains("connection refused")
@@ -208,7 +210,11 @@ public class GenerateController implements GenerateAPI {
             return shouldRetry;
         }
 
-        String message = throwable.getMessage() != null ? throwable.getMessage().toLowerCase() : "";
+        String message =
+                throwable.getMessage() != null
+                        ? LogSanitizer.sanitizeForLog(throwable.getMessage())
+                                .toLowerCase(Locale.ROOT)
+                        : "";
         boolean retry = message.contains("transient") || message.contains("connection refused");
         logger.debug(
                 "Retry filter: Other throwable ({}) for {} - message: '{}', Retrying: {}",
@@ -224,7 +230,9 @@ public class GenerateController implements GenerateAPI {
             String rawBody = wce.getResponseBodyAsString();
             return safeLower(rawBody);
         } catch (Exception ex) {
-            logger.warn("Could not get response body for WCE in retry filter: {}", ex.getMessage());
+            logger.warn(
+                    "Could not get response body for WCE in retry filter: {}",
+                    LogSanitizer.sanitizeException(ex));
             return "";
         }
     }
@@ -239,7 +247,7 @@ public class GenerateController implements GenerateAPI {
                 "Error calling {} service at URL {}: {}",
                 serviceType.getId(),
                 url,
-                throwable.getMessage());
+                LogSanitizer.sanitizeForLog(throwable.getMessage()));
 
         if (isTimeout(throwable)) {
             return Mono.just(
@@ -257,9 +265,10 @@ public class GenerateController implements GenerateAPI {
         return Mono.just(
                 new ServiceResult(
                         HttpStatus.INTERNAL_SERVER_ERROR.value(),
-                        String.format(
-                                "Unexpected error calling %s service: %s",
-                                serviceType.getId(), throwable.getMessage())));
+                        "Unexpected error calling %s service: %s"
+                                .formatted(
+                                        serviceType.getId(),
+                                        LogSanitizer.sanitizeForLog(throwable.getMessage()))));
     }
 
     private static String getErrorMessage(
@@ -270,14 +279,17 @@ public class GenerateController implements GenerateAPI {
         } else {
             // Reverted diagnostic change in message format
             errorMessage =
-                    String.format(
-                            "Error from %s service: %s", serviceType.getId(), detailMessage.trim());
+                    "Error from %s service: %s"
+                            .formatted(serviceType.getId(), detailMessage.trim());
         }
         return errorMessage;
     }
 
     private ServiceType detectFailedService(Throwable e) {
-        String exceptionMessage = e.getMessage() != null ? e.getMessage().toLowerCase() : "";
+        String exceptionMessage =
+                e.getMessage() != null
+                        ? LogSanitizer.sanitizeForLog(e.getMessage()).toLowerCase(Locale.ROOT)
+                        : "";
         if (exceptionMessage.contains(ServiceType.CATALOG.getId())) {
             return ServiceType.CATALOG;
         }
@@ -307,7 +319,7 @@ public class GenerateController implements GenerateAPI {
 
     private String extractWceDetail(WebClientResponseException wce) {
         String wceResponseBody = wce.getResponseBodyAsString();
-        if (wceResponseBody != null && !wceResponseBody.isEmpty()) {
+        if (!wceResponseBody.isEmpty()) {
             return wceResponseBody;
         }
         String statusText = wce.getStatusText();
@@ -326,7 +338,7 @@ public class GenerateController implements GenerateAPI {
      * @return Mono with an appropriate error response
      */
     private Mono<ResponseEntity<GenerationResponse>> handleGenerationError(Throwable e) {
-        logger.error("Error in generation process: {}", e.getMessage(), e);
+        logger.error("Error in generation process: {}", LogSanitizer.sanitizeException(e), e);
 
         HttpStatus status = HttpStatus.INTERNAL_SERVER_ERROR;
         String errorMessage = "An unexpected error occurred during data generation.";
@@ -339,9 +351,10 @@ public class GenerateController implements GenerateAPI {
             putIfKnown(serviceResponsesMap, failedService, "Timeout occurred");
         } else if (e instanceof WebClientResponseException wce) {
             status = resolveStatusOrDefault(wce);
-            String specificErrorMessage = extractWceDetail(wce);
+            String specificErrorMessage = LogSanitizer.sanitizeForLog(extractWceDetail(wce));
 
-            // Always log the detailed upstream message at debug level (or info for visibility)
+            // Always log the detailed upstream message at debug level (or info for
+            // visibility)
             String requestUri = "";
             try {
                 var req = wce.getRequest();
@@ -363,13 +376,12 @@ public class GenerateController implements GenerateAPI {
             } else if (failedService != null) {
                 // Use a generic client-facing message by default
                 errorMessage =
-                        String.format("Error generating data in %s service", failedService.getId());
+                        "Error generating data in %s service".formatted(failedService.getId());
 
                 if (exposeUpstreamErrors) {
                     String serviceSpecificDetail =
-                            String.format(
-                                    "Error from %s service: %s",
-                                    failedService.getId(), specificErrorMessage.trim());
+                            "Error from %s service: %s"
+                                    .formatted(failedService.getId(), specificErrorMessage.trim());
                     serviceResponsesMap.put(failedService.getId(), serviceSpecificDetail);
                 } else {
                     // Store only a generic marker in serviceResponsesMap to avoid leaking details
@@ -377,23 +389,25 @@ public class GenerateController implements GenerateAPI {
                             failedService.getId(), "Upstream service error (hidden)");
                 }
             } else {
-                // Unknown failed service: don't include upstream body in client message by default
+                // Unknown failed service: don't include upstream body in client message by
+                // default
                 if (exposeUpstreamErrors) {
                     errorMessage =
-                            String.format(
-                                    "Error from unknown service: %s", specificErrorMessage.trim());
+                            "Error from unknown service: %s".formatted(specificErrorMessage.trim());
                 } else {
                     errorMessage = "Error from upstream service";
                 }
             }
         } else {
-            putIfKnown(serviceResponsesMap, detectFailedService(e), e.getMessage());
+            putIfKnown(
+                    serviceResponsesMap,
+                    detectFailedService(e),
+                    LogSanitizer.sanitizeForLog(e.getMessage()));
         }
 
         if ("An unexpected error occurred during data generation.".equals(errorMessage)
                 && failedService != null) {
-            errorMessage =
-                    String.format("Error generating data in %s service", failedService.getId());
+            errorMessage = "Error generating data in %s service".formatted(failedService.getId());
         }
 
         return Mono.just(
